tracker and animal fixes