@@ -2,46 +2,48 @@ package agh.ics.oop.model;
 
 import agh.ics.oop.OptionsParser;
 
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.Random;
 
 public class Animal implements WorldElement {
+    private static int idCounter = 0;
+    private final int id;
     private final int reproductionEnergy;
     private final int minMutation;
     private final int maxMutation;
     private final int moveIndex;
     private Vector2d position;
-    MapDirection orientation;
+    private MapDirection orientation;
     private int energy;
     private final Genome genome;
     public Animal parent1;
     public Animal parent2;
-    int birthEnergy;
+    private int birthEnergy;
     private final MoveVariant moveVariant;
     private int age = 0;
     private int numberOfChildren = 0;
 
-    public Animal(Vector2d initialPosition, int initialEnergy, int genomeLength, int reproductionEnergy, int birthEnergy, int minMutation, int maxMutation, MoveVariant moveVariant) {
-        this.orientation = MapDirection.NORTH; //randomowa
-        this.position = initialPosition;
-        this.energy = initialEnergy;
-        this.genome = new Genome(genomeLength);
+    public Animal(AnimalConfig config) {
+        this.id = idCounter++;
+        this.orientation = getRandomOrientation();
+        this.position = config.getInitialPosition();
+        this.energy = config.getInitialEnergy();
+        this.genome = new Genome(config.getGenomeLength());
         this.parent1 = null;
         this.parent2 = null;
-        this.reproductionEnergy = reproductionEnergy;
-        this.minMutation = minMutation;
-        this.maxMutation = maxMutation;
+        this.reproductionEnergy = config.getReproductionEnergy();
+        this.minMutation = config.getMinMutation();
+        this.maxMutation = config.getMaxMutation();
+        this.moveVariant = config.getMoveVariant();
+        this.birthEnergy = config.getBirthEnergy();
         this.moveIndex = -1;
-        this.moveVariant = moveVariant;
-        this.birthEnergy = birthEnergy;
     }
 
-    //tworzenie dzieci
     public Animal(Vector2d position, int energy, Genome genome, Animal parent1, Animal parent2, int reproductionEnergy, int birthEnergy, int minMutation, int maxMutation, int moveIndex, MoveVariant moveVariant) {
+        this.id = idCounter++;
         this.moveIndex = moveIndex;
-        this.orientation = MapDirection.NORTH; //zmienic na randomową
+        this.orientation = getRandomOrientation();
         this.position = position;
         this.energy = energy;
         this.genome = genome;
@@ -52,7 +54,12 @@ public class Animal implements WorldElement {
         this.maxMutation = maxMutation;
         this.moveVariant = moveVariant;
         this.birthEnergy = birthEnergy;
+    }
 
+    private MapDirection getRandomOrientation() {
+        MapDirection[] directions = MapDirection.values();
+        Random random = new Random();
+        return directions[random.nextInt(directions.length)];
     }
 
     public void setPosition(Vector2d position) {
@@ -60,15 +67,13 @@ public class Animal implements WorldElement {
     }
 
     public Animal reproduce(Animal parent) {
-
         this.numberOfChildren++;
         parent.setNumberOfChildren(parent.getNumberOfChildren() + 1);
 
         List<Integer> childGenes = this.genome.createChildGenome(this, parent);
-
         Genome childGenome = new Genome(childGenes, this.minMutation, this.maxMutation);
 
-        Animal child = new Animal(this.position,this.birthEnergy + parent.birthEnergy, childGenome, this, parent, this.reproductionEnergy, this.birthEnergy, this.minMutation, this.maxMutation, -1, moveVariant);
+        Animal child = new Animal(this.position, this.birthEnergy + parent.birthEnergy, childGenome, this, parent, this.reproductionEnergy, this.birthEnergy, this.minMutation, this.maxMutation, -1, moveVariant);
         this.addEnergy(-this.birthEnergy);
         parent.addEnergy(-parent.birthEnergy);
         return child;
@@ -79,7 +84,8 @@ public class Animal implements WorldElement {
         int index = this.moveVariant.getNextMoveIndex(genome, moveIndex);
         int moveDirectionCode = genome.getGenes().get(index);
         List<MoveDirection> directions = OptionsParser.parse(new String[]{Integer.toString(moveDirectionCode)});
-        MoveDirection direction = directions.getFirst();
+        MoveDirection direction = directions.get(0);
+
         switch (direction) {
             case FORWARD:
                 break;
@@ -107,13 +113,13 @@ public class Animal implements WorldElement {
             default:
                 throw new IllegalArgumentException("Invalid move direction: " + direction);
         }
+
         Vector2d nextPositionForward = this.position.add(orientation.toUnitVector());
-        if(validator.canMoveTo(nextPositionForward)) {
+        if (validator.canMoveTo(nextPositionForward)) {
             this.position = nextPositionForward;
         }
-        this.addEnergy(-1); // ale czy nie ma odejmowac energii tylko po wykonaniu ruchu?
+        this.addEnergy(-1);
     }
-
 
     public void addEnergy(int value) {
         this.energy += value;
@@ -123,7 +129,7 @@ public class Animal implements WorldElement {
         return this.energy;
     }
 
-    public Genome getGenomes() {
+    public Genome getGenome() {
         return this.genome;
     }
 
@@ -154,7 +160,6 @@ public class Animal implements WorldElement {
                 MapDirection.SOUTH_WEST, MapDirection.NORTH_EAST,
                 MapDirection.SOUTH_EAST, MapDirection.NORTH_WEST
         );
-
         this.orientation = opposites.get(this.orientation);
     }
 
@@ -168,5 +173,13 @@ public class Animal implements WorldElement {
 
     public void setNumberOfChildren(int numberOfChildren) {
         this.numberOfChildren = numberOfChildren;
+    }
+
+    public Object getId() {
+        return this.id;
+    }
+
+    public int getMoveIndex() {
+        return this.moveIndex;
     }
 }
